# reaction_yield_pretrained_gnn_changed

./: .python_history  box_plot.py  deletelist.txt  main_finetune_isomap.py  main_finetune_pca.py  main_finetune_tsne.py  main_finetune_umap.py  main_pretrain_isomap.py  main_pretrain_pca.py  main_pretrain_tsne.py  main_pretrain_umap.py  pyproject.toml  repeat-train-pretrain.sh  run_comparison.sh  run_pca.sh  run_umap.sh  test_result_latex.py  trainloss-data.txt  versions
graph/: graph_creator.py  summary_exp_1.csv  summary_exp_2.csv  summary_exp_3.csv
graph/40features/: summary_exp_1.csv  summary_exp_2.csv  summary_exp_3.csv
graph/80features/: summary_exp_1.csv  summary_exp_2.csv  summary_exp_3.csv
latex_tables/40features/: table_exp_1.tex  table_exp_2.tex  table_exp_3.tex
latex_tables/80features/: table_exp_1.tex  table_exp_2.tex  table_exp_3.tex
latex_test_tables/40features/: test_results_exp_1.tex  test_results_exp_2.tex  test_results_exp_3.tex
latex_test_tables/80features/: test_results_exp_1.tex  test_results_exp_2.tex  test_results_exp_3.tex
model/pretrained/: 27407_pretrained_gnn_isomap.pt  27407_pretrained_gnn_pca.pt  27407_pretrained_gnn_tsne.pt  27407_pretrained_gnn_umap.pt
result/: result_1.csv  result_2.csv  result_3.csv
src/: finetune_isomap.py  finetune_pca.py  finetune_tsne.py  finetune_umap.py  model.py  pretrain.py  pretrain_isomap.py  pretrain_pca.py  pretrain_tsne.py  pretrain_umap.py
